force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>Used for role&apos;s/rep&apos;s historical performance analysis.</description>
    <label>Quota</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>