force-app/main/default/objects/Quota__c/fields/Adj_Role_Start_Date_v2__c.field-meta.xml
<CustomField>
    <fullName>Adj_Role_Start_Date_v2__c</fullName>
    <label>Adj. Role Start Date</label>
    <type>Date</type>
</CustomField>