force-app/main/default/objects/Quota__c/fields/ADR_Quota__c.field-meta.xml
<CustomField>
    <fullName>ADR_Quota__c</fullName>
    <description>Qualified transfer quota</description>
    <inlineHelpText>Qualified transfer quota</inlineHelpText>
    <label>ADR Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>