force-app/main/default/objects/Quota__c/fields/ADR_Segment_Alignment__c.field-meta.xml
<CustomField>
    <fullName>ADR_Segment_Alignment__c</fullName>
    <description>The segment OB ADRs are supporting, as this is not in the role hierarchy. This is field is being getting data from User Object.</description>
    <label>ADR Segment Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE2</fullName>
            </value>
            <value>
                <fullName>AE3</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>DVS</fullName>
            </value>
            <value>
                <fullName>AE2 SLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>