force-app/main/default/objects/Quota__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <description>Fiscal period associated with the quota.</description>
    <label>Fiscal Period</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>