force-app/main/default/objects/Quota__c/fields/Fiscal_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period_Start_Date__c</fullName>
    <description>Used to determine ramp period and status</description>
    <inlineHelpText>Used to determine ramp period and status</inlineHelpText>
    <label>Fiscal Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>