force-app/main/default/objects/Quota__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>TextArea</type>
</CustomField>