force-app/main/default/objects/Quota__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount associated with the quota instance.</description>
    <label>Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>