force-app/main/default/objects/Quota__c/fields/Quota_Period__c.field-meta.xml
<CustomField>
    <fullName>Quota_Period__c</fullName>
    <description>Used to differentiate between monthly vs. quarterly quotas</description>
    <inlineHelpText>Used to differentiate between monthly vs. quarterly quotas</inlineHelpText>
    <label>Quota Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>