force-app/main/default/objects/Quota__c/fields/Quota_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_Period_End_Date__c</fullName>
    <description>For trigger to run. Rep cannot have a quota record with overlapping quota period start/end dates</description>
    <inlineHelpText>For trigger to run. Rep cannot have a quota record with overlapping quota period start/end dates</inlineHelpText>
    <label>Quota Period End Date</label>
    <type>Date</type>
</CustomField>