force-app/main/default/objects/Quota__c/fields/Ramp_Month__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Month__c</fullName>
    <description>Number of months a rep has been in their role at the start of the quota period</description>
    <formula>IF( ( Fiscal_Period_Start_Date__c  -   Adj_Role_Start_Date_v2__c  ) / 365 * 12 &lt; 1, 

((Fiscal_Period_Start_Date__c  -  Adj_Role_Start_Date_v2__c) / 365 * 12 ) + 1,

(CEILING(Fiscal_Period_Start_Date__c - Adj_Role_Start_Date_v2__c) / 365 * 12) + 1

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of months a rep has been in their role at the start of the quota period</inlineHelpText>
    <label>Ramp Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>