force-app/main/default/objects/Quota__c/fields/Ramp_Status__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Status__c</fullName>
    <description>Denotes if a rep is ramping or fully ramped based on their ramp month</description>
    <inlineHelpText>Denotes if a rep is ramping or fully ramped based on their ramp month</inlineHelpText>
    <label>Ramp Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>