force-app/main/default/objects/Quota__c/fields/Role_at_Start_of_Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Role_at_Start_of_Fiscal_Period__c</fullName>
    <description>Role of the rep at the start of Fiscal Period</description>
    <label>Role at Start of Fiscal Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>