force-app/main/default/objects/Quota__c/fields/Role_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_End_Date__c</fullName>
    <description>Role start date for rep&apos;s role tied to the quota record. If null, rep was present for the full quota period.</description>
    <inlineHelpText>Role start date for rep&apos;s role tied to the quota record. If null, rep was present for the full quota period.</inlineHelpText>
    <label>Role End Date</label>
    <type>Date</type>
</CustomField>