force-app/main/default/objects/Quota__c/fields/Role_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_Start_Date__c</fullName>
    <description>Role start date for rep&apos;s role tied to the quota record</description>
    <inlineHelpText>Role start date for rep&apos;s role tied to the quota record</inlineHelpText>
    <label>Role Start Date</label>
    <type>Date</type>
</CustomField>