force-app/main/default/objects/Quota__c/fields/Segment_Sales_Role__c.field-meta.xml
<CustomField>
    <fullName>Segment_Sales_Role__c</fullName>
    <description>Based on Role at Start of Fiscal Period</description>
    <formula>IF(CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;ADR&quot;),&quot;ADR&quot;, 

IF(OR(CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;Industrial&quot;),CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;IND&quot;)),&quot;Industrial&quot;, 

IF(OR( CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;Enterprise&quot;),CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;Major&quot;),CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;RSM&quot;)), &quot;ENT&quot;, 

IF(OR( CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;MM&quot;),CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;Experimental&quot;)),&quot;MM&quot;, 

IF(CONTAINS(Role_at_Start_of_Fiscal_Period__c,&quot;SMB&quot;),&quot;CML&quot;,&quot;n/a&quot;)

)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on Role at Start of Fiscal Period</inlineHelpText>
    <label>Segment (Sales Role)</label>
    <type>Text</type>
</CustomField>