force-app/main/default/objects/Quota__c/fields/Total_ADR_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Total_ADR_Transfers__c</fullName>
    <description>Holds the count of the total number of quota transfer records associated.</description>
    <label>Total ADR Transfers</label>
    <summaryForeignKey>Quota_Transfer_Log__c.Related_Quota_for_the_ADR_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>