force-app/main/default/objects/Quota__c/fields/Total_Commissionable_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissionable_Dollars__c</fullName>
    <description>Field to display the converted amount in the associated currency of the quota.</description>
    <formula>Total_Converted_Commissionable_Dollars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissionable Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>