force-app/main/default/objects/Quota__c/fields/Trial_Quota__c.field-meta.xml
<CustomField>
    <fullName>Trial_Quota__c</fullName>
    <description>Created as part of GTMS-24162,  A manually uploaded field where values can be entered to represent quotas for ADR transfers.</description>
    <label>Trial+ Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>