force-app/main/default/objects/Quota__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User associated with the Quota instance.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>