force-app/main/default/objects/Quota__c/validationRules/Quota_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quota_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Quota__c &lt;&gt; Q1_Quota__c + Q2_Quota__c + Q3_Quota__c + Q4_Quota__c</errorConditionFormula>
    <errorMessage>Make sure value of Q1,Q2,Q3 and Q4 adds up to the Quota value</errorMessage>
</ValidationRule>